0032444: Modeling Algorithm - BRepOffsetAPI_MakePipeShell crash when using -DT mode and DT_ShapeDivide on the spine

Added checking for null edges in BRepFill_TrimShellCorner::ChooseSection()